--- a/wp-content/themes/govintranetpress/scss/modules/_header.scss
+++ b/wp-content/themes/govintranetpress/scss/modules/_header.scss
@@ -109,8 +109,41 @@
       }
     }
   }
+}
 
+@include mobile-mq() {
+  #searchformdiv {
+    padding-top: 10px;
+  }
 
+  .mobile-nav button {
+    float: right;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    background-image: url('../images/mobile_menu.svg');
+    background-size: 60px 30px;
+    background-position: 0 0;
+    margin-top: 5px;
+
+    .mobile-menu-enabled & {
+      background-position: 30px 0;
+    }
+  }
+
+  .header {
+    &.mobile-menu-enabled {
+      .search-box,
+      #mainnav {
+        display: none;
+      }
+
+      #utilities {
+        display: block;
+      }
+    }
+  }
 }
 
 #zzz {
@@ -243,22 +276,6 @@
       }
     }
 
-    .mobile-nav button {
-      float: right;
-      width: 30px;
-      height: 30px;
-      border: none;
-      background-color: transparent;
-      background-image: url('../images/mobile_menu.svg');
-      background-size: 60px 30px;
-      background-position: 0 0;
-      margin-top: 20px;
-      margin-right: -10px;
 
-
-      .mobile-menu-enabled & {
-        background-position: 30px 0;
-      }
-    }
   }
 }
