--- a/wp-content/themes/govintranetpress/scss/modules/_utility_bar.scss
+++ b/wp-content/themes/govintranetpress/scss/modules/_utility_bar.scss
@@ -34,7 +34,11 @@
   }
 }
 
-@media(max-width: 767px){
+@include mobile_mq(){
+  #utilities {
+    display: none;
+  }
+
   .mobile-menu-enabled #utilities {
     #utilitybar {
       float: none;
